# netmam

./: .gitignore  .vercelignore  README.md  package-lock.json  package.json  vercel.json
android/: README.md
electron/: README.md  main.js
netplay/: README.md
netplay-online/: Cargo.toml  Dockerfile  README.md  fly.toml  render.yaml
netplay-online/src/: main.rs
public/: app.js  index.html  manifest.webmanifest  roms.json  service-worker.js  styles.css
scripts/: check-static.js  make-ico.js  netplay-server.js
